--- a/src/engine/test/health_test/configuration_files/general.conf
+++ b/src/engine/test/health_test/configuration_files/general.conf
@@ -2,7 +2,9 @@
 # Sets the logging level.
 server.log_level="error"
 # Sets the logging output. Default: stdout.
-server.log_output=""
+server.log_output="github_workspace/logs/engine_tmp.log"
+# Allows whether or not to delete the log file at each start of the engine
+server.log_truncate=true
 # Sets the number of threads for server worker pool.
 server.server_threads=2
 # Sets the events server socket address.
