--- a/src/engine/test/source/base/CMakeLists.txt
+++ b/src/engine/test/source/base/CMakeLists.txt
@@ -28,6 +28,12 @@ add_executable(result_test
 target_link_libraries(result_test gtest_main base)
 gtest_discover_tests(result_test)
 
+add_executable(logger_test
+  logger_test.cpp
+)
+target_link_libraries(logger_test gtest_main base)
+gtest_discover_tests(logger_test)
+
 add_executable(graph_test
 graph_test.cpp
 )
