--- a/src/engine/test/integration_tests/configuration_files/general.conf
+++ b/src/engine/test/integration_tests/configuration_files/general.conf
@@ -3,6 +3,8 @@
 server.log_level="error"
 # Sets the logging output. Default: stdout.
 server.log_output="github_workspace/logs/engine_tmp.log"
+# Allows whether or not to delete the log file at each start of the engine
+server.log_truncate=true
 # Sets the number of threads for server worker pool.
 server.server_threads=2
 # Sets the events server socket address.
