--- a/.github/workflows/packages-upload-agent-images.yml
+++ b/.github/workflows/packages-upload-agent-images.yml
@@ -1,12 +1,5 @@
 name: Package - Upload Docker images for linux agent - DEB|RPM - amd64 and i386
 on:
-  pull_request:
-    paths:
-      - '.github/workflows/packages-upload-agent-images.yml'
-      - 'packages/build.sh'
-      - 'packages/generate_package.sh'
-      - 'packages/rpms/utils/**'
-      - 'packages/debs/utils/**'
   workflow_dispatch:
     inputs:
       tag:
@@ -39,7 +32,7 @@ jobs:
             DOCKERFILE_PATH: packages/rpms/i386/legacy
             DISTRO: rpm
           - CONTAINER_NAME: pkg_rpm_legacy_builder_amd64
-            DOCKERFILE_PATH: packages/rpms/i386/legacy
+            DOCKERFILE_PATH: packages/rpms/amd64/legacy
             DISTRO: rpm
       fail-fast: false
 
@@ -92,7 +85,12 @@ jobs:
         run: |
           cp $GITHUB_WORKSPACE/packages/build.sh $GITHUB_WORKSPACE/${{ matrix.DOCKERFILE_PATH }}
           cp $GITHUB_WORKSPACE/packages/${{ matrix.DISTRO }}s/utils/* $GITHUB_WORKSPACE/${{ matrix.DOCKERFILE_PATH }}
-
+      - name: Copy centos-5-i386.tar.gz to Dockerfile legacy path
+        if: |
+          ( steps.changes.outputs.rpm_legacy_i386 == 'true' && matrix.CONTAINER_NAME == 'pkg_rpm_legacy_builder_i386' ) ||
+          ( steps.changes.outputs.rpm_legacy_amd64 == 'true' && matrix.CONTAINER_NAME == 'pkg_rpm_legacy_builder_amd64' )
+        run:
+          cd $GITHUB_WORKSPACE/${{ matrix.DOCKERFILE_PATH }} && curl -sO "https://packages-dev.wazuh.com/utils/centos-5-i386-build/centos-5-i386.tar.gz"
       - name: Set tag
         run: |
           VERSION=$(sed 's/^v\([0-9]*\.[0-9]*\.[0-9]*\)/\1/' $GITHUB_WORKSPACE/src/VERSION)
