--- a/.github/workflows/packages-build-manager.yml
+++ b/.github/workflows/packages-build-manager.yml
@@ -103,7 +103,33 @@ jobs:
 
       - uses: actions/checkout@v4
         
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.CI_INTERNAL_DEVELOPMENT_BUCKET_USER_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.CI_INTERNAL_DEVELOPMENT_BUCKET_USER_SECRET_KEY }}
+          aws-region: us-east-1
+        
+      - name: Check if package already exists in AWS
+        run: |
+          echo "ABORT_JOB=no" >> $GITHUB_ENV
+          if [ ${{ inputs.package-format }} == 'rpm' ]; then 
+            if [ ${{ inputs.arch }} == 'amd64' ]; then arch_name=x86_64;
+            else arch_name=aarch64; fi
+          else
+            arch_name=${{ inputs.arch }}
+          fi
+          if [ ${{ inputs.release-package }} != 'yes' ]; then 
+            short_commit_hash="$(curl -s https://api.github.com/repos/wazuh/wazuh/commits/${{ github.ref_name}} | grep '"sha"' | head -n 1| cut -d '"' -f 4 | cut -c 1-7)"
+          fi
+          curl -O https://raw.githubusercontent.com/wazuh/wazuh/${{ inputs.branch }}/src/VERSION; echo "version=$(sed 's/.*\([0-9]\.[0-9]*\.[0-9]*\).*/\1/' $GITHUB_WORKSPACE/VERSION)";
+          if aws s3 ls s3://packages-dev.internal.wazuh.com/development/wazuh/4.x/main/packages/ --recursive | grep -q "wazuh-manager.*$version.*${{ inputs.revision }}.*$arch_name.*$short_commit_hash.*${{ inputs.package-format }}.*"; then
+            echo "::notice:: Package already exists in s3://packages-dev.internal.wazuh.com/development/wazuh/4.x/main/packages/"; 
+            echo "ABORT_JOB=yes" >> $GITHUB_ENV
+          fi
+
       - name: Set tag and container name
+        if: env.ABORT_JOB != 'yes'
         run: |
           VERSION=$(sed 's/^v\([0-9]*\.[0-9]*\.[0-9]*\)/\1/' $GITHUB_WORKSPACE/src/VERSION)
           if [ "${{ inputs.branch }}" == "master" ]; then echo "TAG=$VERSION" >> $GITHUB_ENV;
@@ -111,10 +137,12 @@ jobs:
           echo "CONTAINER_NAME=pkg_${{ inputs.package-format }}_manager_builder_${{ inputs.arch }}" >> $GITHUB_ENV
 
       - name: Download docker image for package building
+        if: env.ABORT_JOB != 'yes'
         run: |
           bash $GITHUB_WORKSPACE/.github/actions/ghcr-pull-and-push/pull_image_from_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} $CONTAINER_NAME ${{ env.TAG }}
 
       - name: Build ${{ inputs.package-format }} wazuh-manager on ${{ inputs.arch }}
+        if: env.ABORT_JOB != 'yes'
         working-directory: packages
         run: |
           REVISION=${{ inputs.revision }}
@@ -123,14 +151,8 @@ jobs:
           if [ ${{ inputs.debuggable-package }} == 'yes' ]; then FLAGS+=" --debug" ; fi
           bash generate_package.sh -b ${{ inputs.branch }} -j $(nproc) -t manager -s /tmp -a ${{ inputs.arch }} --dont-build-docker --tag ${{ env.TAG }} -r $REVISION --package-format ${{ inputs.package-format }} $FLAGS
 
-      - name: Set up AWS CLI
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.CI_INTERNAL_DEVELOPMENT_BUCKET_USER_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.CI_INTERNAL_DEVELOPMENT_BUCKET_USER_SECRET_KEY }}
-          aws-region: us-east-1
-
       - name: Upload package to S3
+        if: env.ABORT_JOB != 'yes'
         run: |
           for file in /tmp/*manager*; do
             aws s3 cp $file s3://packages-dev.internal.wazuh.com/development/wazuh/4.x/main/packages/
